# mbedtls-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish-crate-dry-run.yml  publish-crate.yml
examples/common/: std_rng.rs
examples/esp/: Cargo.toml
examples/esp/src/: bootstrap.rs
examples/std/: Cargo.toml
examples/std/.cargo/: config.toml
examples/std/src/: bootstrap.rs
mbedtls-rs/: Cargo.toml  README.md
mbedtls-rs-sys/: Cargo.toml  README.md  build.rs
mbedtls-rs-sys/libs/thumbv6m-none-eabi/include/mbedtls/: mbedtls_config.h
mbedtls-rs-sys/libs/xtensa-esp32s2-none-elf/include/mbedtls/: mbedtls_config.h
mbedtls-rs-sys/src/: clock.rs  extra_impls.rs  hook.rs  lib.rs  self_test.rs  timer.rs
mbedtls-rs-sys/src/clock/: esp.rs  std.rs
mbedtls-rs-sys/src/hook/: backend.rs  digest.rs  timer.rs  wall_clock.rs
mbedtls-rs-sys/src/hook/backend/: embassy.rs  esp.rs  esp_exp_mod_route.rs  std.rs
mbedtls-rs-sys/src/hook/backend/esp/: digest.rs  exp_mod.rs  wall_clock.rs
mbedtls-rs-sys/src/hook/backend/std/: timer.rs  wall_clock.rs
mbedtls-rs-sys/src/hook/digest/: sha256.rs  sha512.rs
mbedtls-rs-sys/src/include/: riscv32imac-unknown-none-elf.rs  riscv32imc-unknown-none-elf.rs  thumbv7em-none-eabi.rs  xtensa-esp32s2-none-elf.toml
mbedtls-rs-sys/src/timer/: embassy.rs  std.rs
mbedtls-rs-sys/tests/: config_validators.rs  exp_mod_route.rs
mbedtls-rs/src/: cert.rs  lib.rs  session.rs
mbedtls-rs/src/session/: asynch.rs  blocking.rs
mbedtls-rs/tests/: async_split_aliasing.rs  blocking_eof.rs  cert_key_ctor_aliasing.rs  rng_ffi.rs  saved_session_binding.rs  write_drain.rs
xtask/: Cargo.toml
xtask/src/: main.rs
