[workspace]
resolver = "2"
members = [
    "mbedtls-rs",
    "mbedtls-rs-sys",
]

exclude = ["examples", "xtask"]

[workspace.dependencies]
defmt = { version = "1", default-features = false }
log = { version = "0.4", default-features = false }
enumset = { version = "1", default-features = false }
digest = { version = "0.10", default-features = false }
sha1 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
time = { version = "0.3", default-features = false }
critical-section = { version = "1", default-features = false }

embedded-io = { version = "0.7", default-features = false }
embedded-io-async = { version = "0.7", default-features = false }
rand_core = { version = "0.10.1", default-features = false }

# For esp-hal hook impls
esp-hal = { version = "~1.1.0", default-features = false }
crypto-bigint = { version = "0.5.3", default-features = false }

# For embassy timer hook impl
embassy-time = {version = "0.5", default-features = false}

mbedtls-rs-sys = { version = "0.1", path = "mbedtls-rs-sys", default-features = false }

# Build dependencies
anyhow = "1"
bindgen = "0.72"
env_logger = "0.11"
cmake = "0.1.52"
cc = "1.1"
fs_extra = "1.3"
embuild = "0.33"
