[package]
name = "mbedtls-rs-sys"
version = "0.1.0"
edition = "2021"
links = "mbedtls"
license = "MIT OR Apache-2.0"
rust-version = "1.84"
description = "Raw Rust bindings of the MbedTLS library"
repository = "https://github.com/esp-rs/mbedtls-rs"
readme = "README.md"
exclude = ["*.pyc", "mbedtls/framework", "mbedtls/programs", "mbedtls/tests"]

[lib]
harness = false

[features]
# The default profile is the full config (`tls`), so behavior is unchanged for
# existing consumers and the pre-generated bindings/libs apply as-is. Select a
# narrower bundle (`openthread`/`matter`) or individual `alg-*`/`curve-*`/...
# features to shrink the compiled-in algorithm set (forces an on-the-fly
# rebuild). See `gen/features.rs`.
default = ["tls"]

# The exact algorithm profile the committed per-target prebuilt libraries and
# bindings are built with (see `xtask`, which builds them with this feature).
# `gen/features.rs::PREBUILT_FEATURES` must list the same leaves. Keep it equal
# to `tls`: the prebuilt artifacts are only reused when the active features +
# hooks match this profile exactly.
prebuilt = ["tls"]

# Always generate the bindings during build, even if pre-built bindings for the build target are available
force-generate-bindings = []
# Use GCC instead of clang
use-gcc = []
# Force the use of the Espressif Riscv GCC toolchain, if the target is a `riscv32*-` target
# If this feature is not enabled, the build will assume and use the "official" RiscV GCC toolchain:
# https://github.com/riscv-collab/riscv-gnu-toolchain
force-esp-riscv-gcc = ["use-gcc"]

# Disable all or some hooks; this would preclude hooking custom HW-accelerated algos
nohook = ["nohook-sha1", "nohook-sha256", "nohook-sha512", "nohook-exp-mod"]
nohook-sha1 = []
nohook-sha256 = []
nohook-sha512 = []
nohook-exp-mod = []
# Enable timer/wall-clock hooks for custom time implementations
hook-timer = []
hook-wall-clock = ["hook-timer"] # 'hook-wall-clock' feature requires 'hook-timer' to be enabled. MbedTLS X.509 certificate validation requires both time() and gmtime_r() functions.

# STD hook impls
std = ["time"]

# esp-hal hook impls
esp32 = ["esp-hal/esp32", "crypto-bigint", "time"]
esp32c2 = ["esp-hal/esp32c2", "time"]
esp32c3 = ["esp-hal/esp32c3", "crypto-bigint", "time"]
esp32c5 = ["esp-hal/esp32c5", "crypto-bigint", "time"]
esp32c6 = ["esp-hal/esp32c6", "crypto-bigint", "time"]
esp32h2 = ["esp-hal/esp32h2", "crypto-bigint", "time"]
esp32s2 = ["esp-hal/esp32s2", "crypto-bigint", "time"]
esp32s3 = ["esp-hal/esp32s3", "crypto-bigint", "time"]

# ---------------------------------------------------------------------------
# Features controlling what MbedTLS algorithms gets compiled in.
# ---------------------------------------------------------------------------

# ---------------------------------------------------------------------------
# Consumer bundles (flat: each lists every leaf it needs).
# ---------------------------------------------------------------------------

# OpenThread (Thread 1.x MTD, as built by `openthread-sys`): AES-CCM/CMAC,
# SHA-256, ECDSA over P-256, PK (DER), CTR-DRBG, entropy. No TLS/X.509/ECDH.
openthread = [
    "alg-aes", "alg-ccm", "alg-cmac", "alg-sha256",
    "alg-ecp", "curve-secp256r1", "alg-ecdsa",
    "pk", "drbg-ctr", "entropy",
    # OpenThread's C unconditionally references `mbedtls_debug_set_threshold`.
    "tls-debug",
]

# rs-matter mbedtls backend: OpenThread's set plus SHA-1, PBKDF2 (PKCS5),
# HKDF, GCM, ECDH, and X.509 CSR generation.
matter = [
    "alg-aes", "alg-ccm", "alg-cmac", "alg-gcm", "alg-sha256", "alg-sha1",
    "alg-ecp", "curve-secp256r1", "alg-ecdh", "alg-ecdsa",
    "alg-hkdf", "alg-pkcs5", "pk", "x509-write",
    "drbg-ctr", "entropy",
]

# Full TLS 1.2/1.3 client+server with X.509 chain verification, as needed by
# the high-level `mbedtls-rs` crate (`MBEDTLS_SSL_PRESET_DEFAULT`). Reproduces
# the historical full config; this is the `default`.
tls = [
    # hashes
    "alg-sha256", "alg-sha512", "alg-sha1", "alg-md5", "alg-ripemd160",
    # ciphers + modes
    "alg-aes", "alg-des", "alg-aria", "alg-camellia", "alg-chacha20",
    "cipher-mode-cbc", "cipher-mode-cfb", "cipher-mode-ofb", "cipher-mode-ctr",
    "cipher-mode-xts",
    # aead / mac
    "alg-gcm", "alg-ccm", "alg-cmac", "alg-chachapoly", "alg-nist-kw",
    # public-key / ec
    "alg-rsa", "alg-rsa-pss", "alg-dhm", "alg-ecp", "alg-ecdh", "alg-ecdsa",
    "alg-ecjpake", "pk",
    # curves
    "curve-secp192r1", "curve-secp224r1", "curve-secp256r1", "curve-secp384r1",
    "curve-secp521r1", "curve-secp192k1", "curve-secp224k1", "curve-secp256k1",
    "curve-bp256r1", "curve-bp384r1", "curve-bp512r1", "curve-curve25519",
    "curve-curve448",
    # kdf / drbg / entropy
    "alg-hkdf", "alg-pkcs5", "alg-pkcs12", "drbg-ctr", "drbg-hmac", "entropy",
    # encoding / x509
    "base64", "pem-parse", "pem-write", "pkcs7", "x509-parse", "x509-write",
    # tls
    "tls-core", "tls-client", "tls-server", "tls-cache", "tls-ticket",
    "tls-debug", "tls-proto-tls12", "tls-proto-tls13", "tls-proto-dtls",
    # key exchanges
    "kex-psk", "kex-ecdhe-ecdsa", "kex-ecdhe-rsa", "kex-ecdh-ecdsa",
    "kex-ecdh-rsa", "kex-rsa", "kex-rsa-psk", "kex-dhe-rsa", "kex-dhe-psk",
    "kex-ecdhe-psk",
    # NOTE: kex-ecjpake is intentionally NOT in the TLS bundle — the historical
    # full config does not enable J-PAKE TLS ciphersuites. It remains available
    # as a leaf feature and is used by the `openthread` bundle.
]

# ---------------------------------------------------------------------------
# Leaf features: one per independently-linkable MbedTLS unit. Each just flags
# itself; `gen/features.rs` maps `CARGO_FEATURE_<NAME>` to the `MBEDTLS_*`
# defines it enables (folding sub-options that share object code).
# ---------------------------------------------------------------------------

# Hashes
alg-sha256 = []        # SHA-256 (+ SHA-224, shared compress)
alg-sha512 = []        # SHA-512 (+ SHA-384, shared compress)
alg-sha1 = []
alg-md5 = []
alg-ripemd160 = []
# Block ciphers + modes
alg-aes = []
alg-des = []           # DES / 3DES
alg-aria = []
alg-camellia = []
alg-chacha20 = []
cipher-mode-cbc = []
cipher-mode-cfb = []
cipher-mode-ofb = []
cipher-mode-ctr = []
cipher-mode-xts = []
# AEAD / MAC
alg-gcm = []
alg-ccm = []
alg-cmac = []
alg-chachapoly = []    # ChaCha20-Poly1305 (+ Poly1305)
alg-nist-kw = []
# Public-key / EC
alg-rsa = []           # RSA (+ PKCS#1 v1.5)
alg-rsa-pss = []       # RSASSA-PSS / OAEP (PKCS#1 v2.1)
alg-dhm = []           # finite-field Diffie-Hellman
alg-ecp = []           # elliptic-curve core (curves selected separately)
alg-ecdh = []
alg-ecdsa = []
alg-ecjpake = []
pk = []                # PK abstraction (parse + write)
# Curves
curve-secp192r1 = []
curve-secp224r1 = []
curve-secp256r1 = []
curve-secp384r1 = []
curve-secp521r1 = []
curve-secp192k1 = []
curve-secp224k1 = []
curve-secp256k1 = []
curve-bp256r1 = []
curve-bp384r1 = []
curve-bp512r1 = []
curve-curve25519 = []
curve-curve448 = []
# KDF / DRBG / entropy
alg-hkdf = []
alg-pkcs5 = []         # PBKDF2
alg-pkcs12 = []
drbg-ctr = []
drbg-hmac = []
entropy = []
# Encoding / X.509
base64 = []
pem-parse = []
pem-write = []
pkcs7 = []
x509-parse = []        # X.509 cert/CRL/CSR parsing + verification
x509-write = []        # X.509 cert/CSR generation
# TLS
tls-engine = []        # bare SSL/TLS+DTLS engine, no X.509-coupled extensions
tls-core = ["tls-engine"] # engine + cert-coupled extensions (SNI, tickets, ...)
tls-client = []
tls-server = []
tls-cache = []
tls-ticket = []
tls-debug = []
tls-proto-tls12 = []
tls-proto-tls13 = []
tls-proto-dtls = []
# Key exchanges
kex-psk = []
kex-ecdhe-ecdsa = []
kex-ecdhe-rsa = []
kex-ecdh-ecdsa = []
kex-ecdh-rsa = []
kex-rsa = []
kex-rsa-psk = []
kex-dhe-rsa = []
kex-dhe-psk = []
kex-ecdhe-psk = []
kex-ecjpake = []

# ---------------------------------------------------------------------------
# Platform alternatives
# ---------------------------------------------------------------------------
# Replace MbedTLS's built-in `mbedtls_platform_zeroize` with a user-supplied
# one (define `MBEDTLS_PLATFORM_ZEROIZE_ALT` and provide the symbol via
# `define_zeroize!`). OFF by default: MbedTLS's own zeroize is portable and
# already guards against dead-store elimination, so enable this only to plug in
# a custom or hardware-backed implementation.
platform-zeroize-alt = []

[dependencies]
defmt = { version = "1", optional = true }
log = { version = "0.4", optional = true }
enumset = { version = "1", default-features = false }
# For hooking
digest = { version = "0.10", default-features = false }
sha1 = { version = "0.10", default-features = false }
# For some reason, `soft` results in enormous slowdowns on xtensa and riscv32
sha2 = { version = "0.10", default-features = false, features = ["force-soft-compact"] }
time = { version = "0.3", default-features = false, optional = true }
critical-section = "1"

# For esp-hal hook impls
esp-hal = { version = "~1.1.0", features = ["unstable"], optional = true }
crypto-bigint = { version = "0.5.3", default-features = false, features = ["extra-sizes"], optional = true }

# For embassy timer hook impl
embassy-time = {version = "0.5", optional = true}

# ESP-IDF: The mbedtls lib distributed with ESP-IDF is used
# All other platforms: mbedtls libs and bindings are created on the fly
[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-sys = { version = "0.37", default-features = false }

[build-dependencies]
anyhow = "1"
bindgen = "0.72"
enumset = "1"
env_logger = "0.11"
log = "0.4"
cmake = "0.1.52"
cc = "1.1"
fs_extra = "1.3"
embuild = "0.33"
