[package]
name = "mbedtls-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.84"

[lib]
harness = false

[features]
default = ["edge-nal"]
defmt = ["dep:defmt", "mbedtls-rs-sys/defmt"]
log = ["dep:log", "mbedtls-rs-sys/log"]

# Re-expose mbedtls-rs-sys features
use-gcc = ["mbedtls-rs-sys/use-gcc"]
force-generate-bindings = ["mbedtls-rs-sys/force-generate-bindings"]
force-esp-riscv-gcc = ["mbedtls-rs-sys/force-esp-riscv-gcc"]

nohook = ["mbedtls-rs-sys/nohook"]
nohook-sha1 = ["mbedtls-rs-sys/nohook-sha1"]
nohook-sha256 = ["mbedtls-rs-sys/nohook-sha256"]
nohook-sha512 = ["mbedtls-rs-sys/nohook-sha512"]
nohook-exp-mod = ["mbedtls-rs-sys/nohook-exp-mod"]

# Time hooks: inclusion model (opt-in, new features)
hook-timer = ["mbedtls-rs-sys/hook-timer"]
hook-wall-clock = ["mbedtls-rs-sys/hook-wall-clock"]

# STD hook impls
std = ["mbedtls-rs-sys/std"]

# esp-hal hook impls
esp32 = ["mbedtls-rs-sys/esp32"]
esp32c2 = ["mbedtls-rs-sys/esp32c2"]
esp32c3 = ["mbedtls-rs-sys/esp32c3"]
esp32c6 = ["mbedtls-rs-sys/esp32c6"]
esp32h2 = ["mbedtls-rs-sys/esp32h2"]
esp32s2 = ["mbedtls-rs-sys/esp32s2"]
esp32s3 = ["mbedtls-rs-sys/esp32s3"]

# embassy-time hook impls
embassy-time = ["mbedtls-rs-sys/embassy-time"]

[dependencies]
mbedtls-rs-sys = { path = "../mbedtls-rs-sys", default-features = false }
defmt = { version = "1", optional = true }
log = { version = "0.4", default-features = false, optional = true }
embedded-io = { version = "0.7" }
embedded-io-async = { version = "0.7" }
enumset = { version = "1", default-features = false }
rand_core = "0.10.1"
critical-section = "1"
edge-nal = { version = "0.6", optional = true }
