[package]
name = "mbedtls-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.84"
description = "Rust library implementing transparent TLS encryption/decryption for IO streams with MbedTLS"
repository = "https://github.com/esp-rs/mbedtls-rs"
readme = "README.md"

[lib]
harness = false

[features]
# The `tls` bundle reproduces the historical full algorithm surface and is ON by
# default, so existing consumers are unchanged. Consumers wanting a smaller build
# set `default-features = false` and select a curated bundle (`tls`/`openthread`/
# `matter`) or any individual `alg-*`/`curve-*`/`cipher-mode-*`/`kex-*`/... leaf below.
# Even with `default-features = false` and no bundle, a minimal non-negotiable floor
# (see the `mbedtls-rs-sys` dependency below) keeps this crate compiling.
default = ["tls"]
defmt = ["dep:defmt", "mbedtls-rs-sys/defmt"]
log = ["dep:log", "mbedtls-rs-sys/log"]

# ─── Algorithm profile selection (granular passthrough to mbedtls-rs-sys) ───
# Curated bundles
# `tls`/`openthread` compile in MBEDTLS_DEBUG_C, so they also enable local
# `tls-debug` (which gates `Tls::set_debug`); `matter` must NOT (no DEBUG_C).
openthread = ["mbedtls-rs-sys/openthread", "tls-debug"]
matter = ["mbedtls-rs-sys/matter"]
tls = ["mbedtls-rs-sys/tls", "tls-debug"]

# Individual algorithm leaves (one per independently-linkable MbedTLS unit)
alg-sha256 = ["mbedtls-rs-sys/alg-sha256"]
alg-sha512 = ["mbedtls-rs-sys/alg-sha512"]
alg-sha1 = ["mbedtls-rs-sys/alg-sha1"]
alg-md5 = ["mbedtls-rs-sys/alg-md5"]
alg-ripemd160 = ["mbedtls-rs-sys/alg-ripemd160"]
alg-aes = ["mbedtls-rs-sys/alg-aes"]
alg-des = ["mbedtls-rs-sys/alg-des"]
alg-aria = ["mbedtls-rs-sys/alg-aria"]
alg-camellia = ["mbedtls-rs-sys/alg-camellia"]
alg-chacha20 = ["mbedtls-rs-sys/alg-chacha20"]
cipher-mode-cbc = ["mbedtls-rs-sys/cipher-mode-cbc"]
cipher-mode-cfb = ["mbedtls-rs-sys/cipher-mode-cfb"]
cipher-mode-ofb = ["mbedtls-rs-sys/cipher-mode-ofb"]
cipher-mode-ctr = ["mbedtls-rs-sys/cipher-mode-ctr"]
cipher-mode-xts = ["mbedtls-rs-sys/cipher-mode-xts"]
alg-gcm = ["mbedtls-rs-sys/alg-gcm"]
alg-ccm = ["mbedtls-rs-sys/alg-ccm"]
alg-cmac = ["mbedtls-rs-sys/alg-cmac"]
alg-chachapoly = ["mbedtls-rs-sys/alg-chachapoly"]
alg-nist-kw = ["mbedtls-rs-sys/alg-nist-kw"]
alg-rsa = ["mbedtls-rs-sys/alg-rsa"]
alg-rsa-pss = ["mbedtls-rs-sys/alg-rsa-pss"]
alg-dhm = ["mbedtls-rs-sys/alg-dhm"]
alg-ecp = ["mbedtls-rs-sys/alg-ecp"]
alg-ecdh = ["mbedtls-rs-sys/alg-ecdh"]
alg-ecdsa = ["mbedtls-rs-sys/alg-ecdsa"]
alg-ecjpake = ["mbedtls-rs-sys/alg-ecjpake"]
pk = ["mbedtls-rs-sys/pk"]
curve-secp192r1 = ["mbedtls-rs-sys/curve-secp192r1"]
curve-secp224r1 = ["mbedtls-rs-sys/curve-secp224r1"]
curve-secp256r1 = ["mbedtls-rs-sys/curve-secp256r1"]
curve-secp384r1 = ["mbedtls-rs-sys/curve-secp384r1"]
curve-secp521r1 = ["mbedtls-rs-sys/curve-secp521r1"]
curve-secp192k1 = ["mbedtls-rs-sys/curve-secp192k1"]
curve-secp224k1 = ["mbedtls-rs-sys/curve-secp224k1"]
curve-secp256k1 = ["mbedtls-rs-sys/curve-secp256k1"]
curve-bp256r1 = ["mbedtls-rs-sys/curve-bp256r1"]
curve-bp384r1 = ["mbedtls-rs-sys/curve-bp384r1"]
curve-bp512r1 = ["mbedtls-rs-sys/curve-bp512r1"]
curve-curve25519 = ["mbedtls-rs-sys/curve-curve25519"]
curve-curve448 = ["mbedtls-rs-sys/curve-curve448"]
alg-hkdf = ["mbedtls-rs-sys/alg-hkdf"]
alg-pkcs5 = ["mbedtls-rs-sys/alg-pkcs5"]
alg-pkcs12 = ["mbedtls-rs-sys/alg-pkcs12"]
drbg-ctr = ["mbedtls-rs-sys/drbg-ctr"]
drbg-hmac = ["mbedtls-rs-sys/drbg-hmac"]
entropy = ["mbedtls-rs-sys/entropy"]
base64 = ["mbedtls-rs-sys/base64"]
pem-parse = ["mbedtls-rs-sys/pem-parse"]
pem-write = ["mbedtls-rs-sys/pem-write"]
pkcs7 = ["mbedtls-rs-sys/pkcs7"]
x509-parse = ["mbedtls-rs-sys/x509-parse"]
x509-write = ["mbedtls-rs-sys/x509-write"]
tls-engine = ["mbedtls-rs-sys/tls-engine"]
tls-core = ["mbedtls-rs-sys/tls-core"]
tls-client = ["mbedtls-rs-sys/tls-client"]
tls-server = ["mbedtls-rs-sys/tls-server"]
tls-cache = ["mbedtls-rs-sys/tls-cache"]
tls-ticket = ["mbedtls-rs-sys/tls-ticket"]
tls-debug = ["mbedtls-rs-sys/tls-debug"]
tls-proto-tls12 = ["mbedtls-rs-sys/tls-proto-tls12"]
tls-proto-tls13 = ["mbedtls-rs-sys/tls-proto-tls13"]
tls-proto-dtls = ["mbedtls-rs-sys/tls-proto-dtls"]
kex-psk = ["mbedtls-rs-sys/kex-psk"]
kex-ecdhe-ecdsa = ["mbedtls-rs-sys/kex-ecdhe-ecdsa"]
kex-ecdhe-rsa = ["mbedtls-rs-sys/kex-ecdhe-rsa"]
kex-ecdh-ecdsa = ["mbedtls-rs-sys/kex-ecdh-ecdsa"]
kex-ecdh-rsa = ["mbedtls-rs-sys/kex-ecdh-rsa"]
kex-rsa = ["mbedtls-rs-sys/kex-rsa"]
kex-rsa-psk = ["mbedtls-rs-sys/kex-rsa-psk"]
kex-dhe-rsa = ["mbedtls-rs-sys/kex-dhe-rsa"]
kex-dhe-psk = ["mbedtls-rs-sys/kex-dhe-psk"]
kex-ecdhe-psk = ["mbedtls-rs-sys/kex-ecdhe-psk"]
kex-ecjpake = ["mbedtls-rs-sys/kex-ecjpake"]
platform-zeroize-alt = ["mbedtls-rs-sys/platform-zeroize-alt"]

# TLS record buffer sizing (per-connection RAM) — passthrough to mbedtls-rs-sys.
ssl-in-content-len-256 = ["mbedtls-rs-sys/ssl-in-content-len-256"]
ssl-in-content-len-512 = ["mbedtls-rs-sys/ssl-in-content-len-512"]
ssl-in-content-len-1024 = ["mbedtls-rs-sys/ssl-in-content-len-1024"]
ssl-in-content-len-2048 = ["mbedtls-rs-sys/ssl-in-content-len-2048"]
ssl-in-content-len-4096 = ["mbedtls-rs-sys/ssl-in-content-len-4096"]
ssl-in-content-len-8192 = ["mbedtls-rs-sys/ssl-in-content-len-8192"]
ssl-in-content-len-16384 = ["mbedtls-rs-sys/ssl-in-content-len-16384"]
ssl-out-content-len-256 = ["mbedtls-rs-sys/ssl-out-content-len-256"]
ssl-out-content-len-512 = ["mbedtls-rs-sys/ssl-out-content-len-512"]
ssl-out-content-len-1024 = ["mbedtls-rs-sys/ssl-out-content-len-1024"]
ssl-out-content-len-2048 = ["mbedtls-rs-sys/ssl-out-content-len-2048"]
ssl-out-content-len-4096 = ["mbedtls-rs-sys/ssl-out-content-len-4096"]
ssl-out-content-len-8192 = ["mbedtls-rs-sys/ssl-out-content-len-8192"]
ssl-out-content-len-16384 = ["mbedtls-rs-sys/ssl-out-content-len-16384"]

# Re-expose mbedtls-rs-sys features
use-gcc = ["mbedtls-rs-sys/use-gcc"]
force-generate-bindings = ["mbedtls-rs-sys/force-generate-bindings"]
force-esp-riscv-gcc = ["mbedtls-rs-sys/force-esp-riscv-gcc"]

nohook = ["mbedtls-rs-sys/nohook"]
nohook-sha1 = ["mbedtls-rs-sys/nohook-sha1"]
nohook-sha256 = ["mbedtls-rs-sys/nohook-sha256"]
nohook-sha512 = ["mbedtls-rs-sys/nohook-sha512"]
nohook-exp-mod = ["mbedtls-rs-sys/nohook-exp-mod"]

# Time hooks: inclusion model (opt-in, new features)
hook-timer = ["mbedtls-rs-sys/hook-timer"]
hook-wall-clock = ["mbedtls-rs-sys/hook-wall-clock"]

# STD hook impls
std = ["mbedtls-rs-sys/std"]

# esp-hal hook impls
esp32 = ["mbedtls-rs-sys/esp32"]
esp32c2 = ["mbedtls-rs-sys/esp32c2"]
esp32c3 = ["mbedtls-rs-sys/esp32c3"]
esp32c5 = ["mbedtls-rs-sys/esp32c5"]
esp32c6 = ["mbedtls-rs-sys/esp32c6"]
esp32h2 = ["mbedtls-rs-sys/esp32h2"]
esp32s2 = ["mbedtls-rs-sys/esp32s2"]
esp32s3 = ["mbedtls-rs-sys/esp32s3"]

# embassy-time hook impls
embassy-time = ["mbedtls-rs-sys/embassy-time"]

[dependencies]
# Algorithm surface is selected by the consumer via this crate's bundle/leaf
# features (default = `tls` = full historical surface). The fixed feature list
# below is the minimal non-negotiable floor that keeps THIS crate compiling even
# under `--no-default-features` (a coherent minimal EC TLS 1.2/1.3 stack: the SSL
# engine, X.509 + PK + PEM parse, ECDHE-ECDSA over P-256, AES-GCM, SHA-256, HKDF,
# CTR-DRBG + entropy). Consumer-selected bundles/leaves are unioned on top.
mbedtls-rs-sys = { workspace = true, default-features = false, features = [
    "tls-engine", "tls-core", "tls-client", "tls-server",
    "tls-proto-tls12", "tls-proto-tls13",
    "kex-ecdhe-ecdsa",
    "alg-sha256", "alg-aes", "alg-gcm", "alg-hkdf",
    "alg-ecp", "alg-ecdh", "alg-ecdsa", "pk",
    "curve-secp256r1",
    "drbg-ctr", "entropy", "base64", "pem-parse", "x509-parse",
] }
defmt = { workspace = true, optional = true }
log = { workspace = true, default-features = false, optional = true }
embedded-io = { workspace = true }
embedded-io-async = { workspace = true }
enumset = { workspace = true, default-features = false }
rand_core = { workspace = true }
critical-section = { workspace = true }
