[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bindgen = "0.72"
enumset = { version = "1", features = ["serde"] }
env_logger = "0.11"
log = "0.4"
cmake = "0.1.52"
cc = "1.1"
tempdir = "0.3"
fs_extra = "1.3"
clap = { version = "4.4", features = ["derive"] }
embuild = "0.33"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
