[package]
name = "examples-esp"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.84"

 # For some reason, opt-level "z" or "s" results in a much smaller HW accel
[profile.release.package.esp-hal]
opt-level = 3
[profile.dev.package.esp-hal]
opt-level = 3

[profile.release]
debug = true
lto = "fat"
opt-level = "s"

[profile.dev]
debug = true
lto = "fat"
opt-level = "z"

[features]
default = ["esp32c6"]
esp32 = ["esp-rtos/esp32", "esp-hal/esp32", "esp-backtrace/esp32", "esp-println/esp32", "esp-radio/esp32", "esp-bootloader-esp-idf/esp32", "esp-metadata-generated/esp32", "mbedtls-rs/esp32", "mbedtls-rs/embassy-time"]
esp32c2 = ["esp-rtos/esp32c2", "esp-hal/esp32c2", "esp-backtrace/esp32c2", "esp-println/esp32c2", "esp-radio/esp32c2", "esp-bootloader-esp-idf/esp32c2", "esp-metadata-generated/esp32c2", "mbedtls-rs/esp32c2", "mbedtls-rs/embassy-time"]
esp32c3 = ["esp-rtos/esp32c3", "esp-hal/esp32c3", "esp-backtrace/esp32c3", "esp-println/esp32c3", "esp-radio/esp32c3", "esp-bootloader-esp-idf/esp32c3", "esp-metadata-generated/esp32c3", "mbedtls-rs/esp32c3", "mbedtls-rs/embassy-time"]
esp32c5 = ["esp-rtos/esp32c5", "esp-hal/esp32c5", "esp-backtrace/esp32c5", "esp-println/esp32c5", "esp-radio/esp32c5", "esp-bootloader-esp-idf/esp32c5", "esp-metadata-generated/esp32c5", "mbedtls-rs/esp32c5", "mbedtls-rs/embassy-time"]
esp32c6 = ["esp-rtos/esp32c6", "esp-hal/esp32c6", "esp-backtrace/esp32c6", "esp-println/esp32c6", "esp-radio/esp32c6", "esp-bootloader-esp-idf/esp32c6", "esp-metadata-generated/esp32c6", "mbedtls-rs/esp32c6", "mbedtls-rs/embassy-time"]
esp32h2 = ["esp-rtos/esp32h2", "esp-hal/esp32h2", "esp-backtrace/esp32h2", "esp-println/esp32h2", "esp-radio/esp32h2", "esp-bootloader-esp-idf/esp32h2", "esp-metadata-generated/esp32h2", "mbedtls-rs/esp32h2", "mbedtls-rs/embassy-time"]
esp32s2 = ["esp-rtos/esp32s2", "esp-hal/esp32s2", "esp-backtrace/esp32s2", "esp-println/esp32s2", "esp-radio/esp32s2", "esp-bootloader-esp-idf/esp32s2", "esp-metadata-generated/esp32s2", "mbedtls-rs/esp32s2", "mbedtls-rs/embassy-time"]
esp32s3 = ["esp-rtos/esp32s3", "esp-hal/esp32s3", "esp-backtrace/esp32s3", "esp-println/esp32s3", "esp-radio/esp32s3", "esp-bootloader-esp-idf/esp32s3", "esp-metadata-generated/esp32s3", "mbedtls-rs/esp32s3", "mbedtls-rs/embassy-time"]

[dependencies]
log = "0.4"
critical-section = "1"
heapless = "0.9"
static_cell = "2"
enumset = { version = "1", default-features = false }
rand_core = "0.10.1"
mbedtls-rs = { path = "../../mbedtls-rs", features = ["log", "hook-wall-clock"] }
sha1 = { version = "0.10", default-features = false }
tinyrlibc = { version = "0.5", default-features = false, features = ["memchr"] }

embassy-time = "0.5"
embassy-executor = "0.10"
embassy-net = "0.8"

# For the `edge_*` examples
edge-http = { version = "0.7", features = ["io"] }
edge-nal-embassy = "0.8"

esp-rtos = { version = "0.3", features = ["esp-radio", "embassy"] }
esp-hal = { version = "~1.1.0", features = ["log-04", "unstable", "exception-handler"] }
esp-alloc = { version = "0.10" }
esp-backtrace = { version = "0.19.0", features = ["panic-handler", "println"] }
esp-println = { version = "0.17", optional = true, features = ["log-04"] }
esp-radio = { version = "0.18", features = ["wifi", "log-04", "unstable"] }
esp-bootloader-esp-idf = { version = "0.5", features = ["log-04"] }
esp-metadata-generated = "0.4"
